tests/compile_fail/enum.rs
use default_boxed::DefaultBoxed;

#[derive(DefaultBoxed)]
enum Foo {}

fn main() {}
