tests/compile_fail/enum.stderr
error: only structs are supported
 --> $DIR/enum.rs:4:1
  |
4 | enum Foo {}
  | ^^^^
